# fingers_control

./: CMakeLists.txt  CameraService.cpp  CameraService.h  MobileNetSSDService.cpp  MobileNetSSDService.h  README.md  fingers_control.cbp  fingers_control.depend  fingers_control.layout  main.cpp  ressources.qrc
include/: CameraService.h
src/: CameraService.cpp
